--- a/Curso React - 4/Buscador-De-Peliculas/src/App.css
+++ b/Curso React - 4/Buscador-De-Peliculas/src/App.css
@@ -3,15 +3,51 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  max-width: 800px;
 }
 
 main {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 form {
   align-items: center;
   display: flex;
   justify-content: center;
+}
+
+.error {
+  color: red;
+}
+
+.movies {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+
+  display: grid;
+  /*Se fraccionan 200px en una columna*/
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+  /*Separación entre elementos*/
+  gap: 32px;
+  max-height: auto-fit;
+}
+
+.movie {
+  text-align: center;
+}
+
+.movie h3,
+.movie p {
+  margin: 0;
+}
+
+.movie img {
+  border-radius: 8px;
+  margin-top: 16px;
 }
